--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:h2:mem:products-db
 spring.h2.console.enabled=true
 spring.cloud.discovery.enabled=false
 spring.cloud.config.enabled=false
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/app-key
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/app-key/protocol/openid-connect/certs
