--- a/Angular-app/angular.json
+++ b/Angular-app/angular.json
@@ -29,6 +29,9 @@
           "options": {
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
+            "polyfills": [
+              "src/polyfills.ts"
+            ],
             "assets": [
               {
                 "glob": "**/*",
